[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/Default/Default.theme" type="Theme" id=1]
[ext_resource path="res://menus/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://audio/music/music.ogg" type="AudioStream" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.6875, 0.6875, 0.6875, 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 281.0
margin_top = 212.0
margin_right = -243.0
margin_bottom = -185.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
margin_left = 312.0
margin_top = 230.0
margin_right = 712.0
margin_bottom = 370.0
rect_min_size = Vector2( 400, 0 )

[node name="VBoxLeaderboard" type="VBoxContainer" parent="CenterContainer/VBox"]
margin_right = 400.0
margin_bottom = 36.0

[node name="LabelLeaderboard" type="Label" parent="CenterContainer/VBox/VBoxLeaderboard"]
margin_right = 400.0
margin_bottom = 32.0
text = "LEADERBOARD"
align = 1
valign = 2

[node name="Leaderboard" type="GridContainer" parent="CenterContainer/VBox/VBoxLeaderboard"]
margin_top = 36.0
margin_right = 400.0
margin_bottom = 36.0
columns = 3

[node name="HBoxName" type="HBoxContainer" parent="CenterContainer/VBox"]
margin_top = 40.0
margin_right = 400.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 48 )
size_flags_vertical = 8

[node name="LabelName" type="Label" parent="CenterContainer/VBox/HBoxName"]
margin_top = 8.0
margin_right = 126.0
margin_bottom = 40.0
text = "YOUR_NAME"

[node name="NameInput" type="LineEdit" parent="CenterContainer/VBox/HBoxName"]
margin_left = 130.0
margin_top = 2.0
margin_right = 400.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 4
align = 1

[node name="HBoxButtons" type="HBoxContainer" parent="CenterContainer/VBox"]
margin_top = 92.0
margin_right = 400.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 48 )

[node name="ButtonQuit" type="Button" parent="CenterContainer/VBox/HBoxButtons"]
margin_top = 4.0
margin_right = 198.0
margin_bottom = 48.0
size_flags_horizontal = 7
size_flags_vertical = 8
text = "QUIT_GAME"

[node name="ButtonStart" type="Button" parent="CenterContainer/VBox/HBoxButtons"]
margin_left = 202.0
margin_top = 4.0
margin_right = 400.0
margin_bottom = 48.0
size_flags_horizontal = 7
size_flags_vertical = 8
text = "START_GAME"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="pressed" from="CenterContainer/VBox/HBoxButtons/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
[connection signal="pressed" from="CenterContainer/VBox/HBoxButtons/ButtonStart" to="." method="_on_ButtonStart_pressed"]
